# AOS

./: .gitignore  CMakeLists.txt  Linker.ld  README.md
Runtime/Newlib/include/: newlib.h
Src/Kernel/: BootStrap.asm  BootStrap.s  KernelMain.cpp  Makefile  StackProtector.cpp  Syscalls.cpp
cmake/: FindBinUtils.cmake  FindClangCxx.cmake  FindGcc.cmake  FindNewLib.cmake  InstallBinUtils.cmake  InstallClangCxx.cmake  InstallGcc.cmake  InstallNewLib.cmake  installThirdParty.cmake
src/boot/: bootstrap.asm  multiboot.h  multiboot_info_reader.cpp  multiboot_info_reader.h
src/hardware/: machine.cpp  machine.h  memory.cpp  memory.h  video_memory.cpp  video_memory.h
src/kernel/: BootStrap.asm  KernelMain.cpp  Syscalls.cpp  file_descriptor.h  kernel_main.cpp  machine.h  os.cpp  os.h  systemcalls.cpp
src/multiboot/: Multiboot.h
src/utils/: logger.cpp  logger.h  source.h
